<resources>
    <string name="app_name">05-controle-abastecimento</string>
    <string-array name="PostosGasolina">
        <item>TEXACO</item>
        <item>IPIRANGA</item>
        <item>SHELL</item>
        <item>PETROBRAS</item>
        <item>OUTROS</item>
    </string-array>
    <string name="campo_preenchido">Este campo deve ser preenchido</string>
    <string name="km_maior">Km nao pode ser menor que a ultima</string>
    <string name="Quilometragem">Quilometragem:</string>
    <string name="Litros">Litros:</string>
    <string name="Data">Data:</string>
    <string name="Longitude">Longitude:</string>
    <string name="Latitude">Latitude:</string>
    <string name="Posto">Posto</string>
    <string name="VerNoMapa">Ver no mapa</string>


    <string name="title_activity_maps">Map</string>

</resources>
